assets/style/style.css
.playerForm {
	width: 800px;
	height: 500px;
	text-align: center;
	margin: 35px auto;
	border: 2px solid grey;
}

#messageBoard {
	overflow-y: scroll;
	height: 688px;
	max-height: 688px;
}

.floatLeft {
	float: left;
	text-align: center;
	padding: 5px;
	margin: 15px;
}

.floatRight {
	float: right;
	width: 55%;
	height: 565px;
	border: 2px solid lightgrey;
	margin: 15px;
}

#gamePlay {
	overflow-y: scroll;
	overflow: hidden;
	position: relative;
}

#resetGame {
	position: absolute;
	bottom: 0;
	text-align: center;
	width: 100%;
}

button {
	background-color: green;
	color: white;
	border: 4px solid green;
	/*border-radius: 10px;*/
	margin-top: 20px;
	width: 60%;
	font-size: 44px;
}

button:hover {
	cursor: pointer;
}

input {
	width: 60%;
	font-size: 60px;
	border: 3px dashed grey;
	padding: 5px;
	text-align: center;
}

.green {
	background-color: green;
	color: white;
}

.red {
	background-color: red;
	color: white;
}

.buttonLabel {
	font-size: 60px;
}

.score {
	font-size: 24px;
	padding-left: 5px;
	padding-top: 5px;
	text-transform: uppercase;
}

#currPlayer {
	padding-left: 5px;
	padding-top: 5px;
	text-transform: uppercase;
	border-top: 2px dashed lightgrey;
	border-bottom: 2px dashed lightgrey;
	padding-bottom: 5px;
}

#messageBoard {
	padding-left: 5px;
}

.hidden {
	display: none;
}

#ticTacToe {
	font-size: 56px;
	width: 480px;
	float: left;
	/*transform: rotate(8deg);*/
	vertical-align: bottom;
	text-align: center;
	margin-top: 5px;
	margin-bottom: 10px;
}

.box {
	display: inline-block;
	height: 150px;
	width: 150px;
	text-align: center;
	padding: 2px;
	font-size: 90px;
	overflow: scroll;
}

#board {
	width: 480px;
	border: 4px solid lightgrey;
	clear: left;
}

#row1 {
	border-bottom: 1px solid black;
}

#row2 {
	border-bottom: 1px solid black;
}

.col1 {
	border-right: 1px solid black;
}

.col2 {
	border-right: 1px solid black;
}

